
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"

    tools:context="ru.medyannikov.restfultest.post_editer">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/editTitle"/>
            <EditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/editDesc"/>
            <EditText
                android:id="@+id/editDesc"
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                />
    </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:layout_weight="0">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/editDate"/>

    <CalendarView
        android:id="@+id/editDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_gravity="bottom" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:layout_weight="0">
        <Button
            android:id="@+id/editItemPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_ok"/>
        <Button
            android:id="@+id/cancelEditItemPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"/>

    </LinearLayout>

</LinearLayout>
